[package]
name = "rauth"
description = "Real-Evolution Authentication/Authorization service"
readme = true
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace]
members = ["."]

[workspace.package]
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
